# vortexai_frontend

./: .env.example  .gitignore  LICENSE  README.md  Tailwind.config.js  env.local.  gitignore.  index.html  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
.github/workflows/: ci.yml  deploy.yml
components/: CacheStatus.js  ChatInterface.js  HamburgerMenu.js  MonitoringDashboard.js  ResourceMonitor.js  chatInterface.js
components/Charts/: ChacheChart.js
components/Chat/: Message.jsx
components/Layout/: Footer.jsx  Header.jsx
components/UI/: Notification.jsx  NotificationsContainer.jsx  Suggestions.jsx  TypingIndicator.jsx
config/: endpoints.js
deployment/docker/: Dockerfile  Dockerfile.dev  nginx.conf
hooks/: useAppState.js  useCache.js  useChat.js  useErrorHandler.js  useNotifications.js  useTheme.js  useWebSocket.js
lib/: commandParser.js
pages/: _app.js  coins.js  dashboard.js  debug.js  exchanges.js  index.js  index.jsx  insights.js  sessions.jsx
public/: manifest.json  sw.js
src/: App.css  App.jsx
src/app/: main.py
src/app/cache/: redis_manager.py
src/app/database/: __init__.py  database.py  models.py
src/app/tasks/: data_sync.py
src/components/: ChatContainer.jsx  MessageList.jsx  StatusIndicator.jsx
src/services/: api.js
styles/: animations.css  components.css  themes.css
utils/: constants.js
